# SnowPortable

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  imgui.ini
SnowEditor/: CMakeLists.txt
SnowEditor/Source/: AssetsView.cpp  AssetsView.h  Controls.cpp  Controls.h  EditorApp.cpp  EditorApp.h  EntityView.cpp  EntityView.h  ResourcesView.cpp  ResourcesView.h  SceneView.cpp  SceneView.h  Utils.cpp  Utils.h
SnowEngine/: CMakeLists.txt
SnowEngine/Assets/Shaders/: default.frag  default.vert
SnowEngine/Source/: EntryPoint.h  SnowEngine.h
SnowEngine/Source/Core/: Application.cpp  Application.h  Common.h  Components.cpp  Components.h  Entity.cpp  Entity.h  Input.cpp  Input.h  Logger.cpp  Logger.h  ResourcePtr.h  Scene.cpp  Scene.h  Utils.cpp  Utils.h
SnowEngine/Source/Core/Project/: Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
SnowEngine/Source/Graphics/: Camera.cpp  Camera.h  GraphicsCore.cpp  GraphicsCore.h  Importers.cpp  Importers.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderTarget.cpp  RenderTarget.h  SceneRenderer.cpp  SceneRenderer.h
SnowEngine/Source/Graphics/Rhi/: Buffers.cpp  Buffers.h  DescriptorSet.h  GuiLayer.cpp  GuiLayer.h  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  Surface.cpp  Surface.h
SnowEngine/Source/Platform/: Window.cpp  Window.h
SnowEngine/Source/Platform/Vulkan/: VkBuffers.cpp  VkBuffers.h  VkCore.cpp  VkCore.h  VkDescriptorSet.cpp  VkDescriptorSet.h  VkGuiLayer.cpp  VkGuiLayer.h  VkImage.cpp  VkImage.h  VkPipeline.cpp  VkPipeline.h  VkRenderPass.cpp  VkRenderPass.h  VkShader.cpp  VkShader.h  VkSurface.cpp  VkSurface.h
TestProject/: TestProject.snow
